--- a/src/assets/okupas/info/Leones.html
+++ b/src/assets/okupas/info/Leones.html
@@ -1,54 +1,80 @@
-<h2>Augusto Costantini</h2>
+<h2>Lautaro Leones</h2>
 
-<p><strong>Edad:</strong> 22 años</p>
-<p><strong>Cumpleaños:</strong> 4 de diciembre</p>
-<p><strong>Apodos:</strong> "Negro", "Gordo"</p>
+<p><strong>Edad:</strong> 23 años</p>
+<p><strong>Cumpleaños:</strong> 16 de septiembre</p>
+<p><strong>Apodos:</strong> "Lauti", "Negro"</p>
 
 <h3>🏆 Palmarés</h3>
 <ul>
-  <li>Okupa del Año (2023)</li>
-  <li>Fail / Momento del Año (2023 / 2024)</li>
-  <li>Video del Año (2023)</li>
-  <li>Rata del Año (2023)</li>
-  <li>Más Funable del Año (2024)</li>
+  <li>Lolero del Año (2023)</li>
+  <li>Okupa del Año (2024)</li>
 </ul>
 
 <h3>😎 Personalidad</h3>
 <p>
-  Extrovertido, carismático y siempre en el centro de atención. Lo que para cualquiera
-  es un error, en él se convierte en un blooper histórico. Hincha de Boca a muerte, estudia
-  geología en la UNC, aunque el Cesar insista en economía. Vive con padres exigentes,
-  en especial César, su padre correntino, que lo hace madrugar y le recrimina cuando no estudia.
+  Estudiante de Abogacía, hincha fiel de Talleres y simpatizante del Real Madrid. Cerebro, productor,
+  editor, guionista, organizador y, cuando se puede, víctima voluntaria del caos permanente de los
+  Okupa Awards.  
+  Puede estar rindiendo en 48 horas y aun así producir una intro cyberpunk de 3 minutos para el año
+  siguiente. Procrastinador de élite, estratega accidental y narrador interno del grupo, analiza todo
+  como si fuese una historia.
+</p>
+<p>
+  Es de los que más habla en el WhatsApp: organiza, avisa, debate, pelea amistosamente y deja audios
+  eternos explicando ideas para la gala. Memoria quirúrgica para anécdotas (a veces bendición, a veces
+  castigo), porque después él arma el Momento del Año.
+</p>
+<p>
+  Alma de presentador y productor, amigo hiperpresente: cae siempre a las juntadas, tiene una opinión
+  lista, un comentario picante y una queja de repuesto.
 </p>
 
 <h3>🎭 Humor y presencia</h3>
 <p>
-  Nunca falta a una juntada. Tiene una risa tan particular que el grupo bautizó "Marta",
-  por parecerse a la de una abuela. Ama ser grabado (aunque a veces es involuntario)
-  y se banca todas las cargadas por sus fails.
+  Humor rápido, observador e irónico. Le encanta resaltar lo ridículo de la vida cotidiana del grupo,
+  documentar cada desastre como si fuese para Netflix y pegarle al que lo amerita… siempre con cariño.
+</p>
+<p>
+  En Discord es presencia fija: siempre viendo un partido random con Augusto, especialmente si nadie
+  más en el planeta lo está mirando.
 </p>
 
 <h3>🤝 Estilo de vida grupal</h3>
 <p>
-  Conocido por "cuidar la moneda" (Rata del Año 2023), pero siempre aporta energía
-  para animar la previa. Se mueve entre memes, quilombos y momentos virales.
+  Es el “project manager no oficial” del grupo. Organiza, recuerda, empuja, edita, graba, vota, reseña
+  y mete presión cuando hace falta.  
+  Si hay quilombo, lo registra.  
+  Si hay momento para recordar, lo anota.  
+  Si hay debate, mete ficha.  
+  Si hay juntada, aparece.  
+  Parte fundamental del folclore okupa.
+</p>
+<p>
+  Uno de los miembros más constantes, tanto física como virtualmente. Sin él, el grupo pierde al
+  narrador.
 </p>
 
 <h3>🎲 Gustos random</h3>
 <p>
-  Fanático del jazz. Apasionado por los dinosaurios. Maneja un Corsa.
-  Dicen que le gustan las mujeres gorditas.
+  Rubias (su clásico absoluto).  
+  Partidos random de cualquier liga, siempre con Augusto al lado.  
+  Juntadas en cualquier formato.  
+  La abogacía —aunque a veces más como excusa para procrastinar.  
+  Odia los números (si hubiera más en la carrera, no estaría ahí).  
+  Ama las historias, los proyectos creativos y todo lo que implique inventar algo nuevo.
 </p>
 
 <h3>🧩 Rol en el grupo</h3>
 <p>
-  Generador constante de material para memes. Cada audio suyo corre riesgo de terminar
-  convertido en videoclip en el Instagram del grupo.
+  El Showrunner de los Okupa Awards.  
+  El archivista de anécdotas.  
+  El productor de momentos.  
+  El que arma, empuja, recuerda y registra.  
+  El que se queja, pero más se mueve.  
+  El guardián de la mitología okupa con una mezcla de organización, obsesión, cariño y creatividad.
 </p>
 
 <h3>🔥 En resumen</h3>
 <p>
-  Augusto es el alma de los bloopers, un imán de momentos virales y un eterno
-  protagonista de la joda. Rata de billetera, pero rey de las risas y de los videos
-  memorables del grupo.
+  Lautaro Leones — Okupa por vocación y por elección.
 </p>
